Update gitignore pats
Reviewers: jfuentes, andres

Differential Revision: http://phabricator.bitnami.com:8080/D10717

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules
 flycheck_*.js
 tools
 npm-debug.log
-/app/runtimes/*
-!/app/runtimes/README
+/runtimes/*
+!/runtimes/README
 /artifacts
